# voice2noise

./: .voiceDetection.py.swp  AudioHandler.cpp  AudioHandler.h  LICENSE  MP3Player.cpp  MP3Player.h  README.md  VirtualAudioManager.cpp  VirtualAudioManager.h  main.cpp  passthrough
build-voice2noise-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  voice2noise
build-voice2noise-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-daf448639ed4d082d243.json  cmakeFiles-v1-6dbbf1ba5c45451443ac.json  index-2025-11-05T01-14-09-0807.json  target-voice2noise-Debug-c86adb1ebeda5df90ee5.json
build-voice2noise-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-140c32ff7643d0245dab.json  codemodel-v2-2dc1e78fbff38519c5d6.json  codemodel-v2-91ce0000075886383900.json  index-2025-11-05T01-13-21-0691.json  index-2025-12-09T03-13-48-0801.json  target-voice2noise-Debug-cf4df0c9b1c405e13f35.json  target-voice2noise_autogen-Debug-0c4b0ec457e8c5b9dbb1.json
build-voice2noise-Desktop-Debug/voice2noise_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-voice2noise-Desktop-Debug/voice2noise_autogen/include/: ui_mainwindow.h
voice2noise/: .qmake.stash  CMakeLists.txt  CMakeLists.txt.user.7833cf5  Makefile  Makefile.Debug  Makefile.Release  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h  voice2noise.pro  voice2noise_plugin_import.cpp
voice2noise/backend/: AudioHandler.cpp  AudioHandler.h  MP3Player.cpp  MP3Player.h  ProgramSetup.cpp  passthrough
voice2noise/release/: moc_mainwindow.cpp
